--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
         sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-    <a href="javascript:(function(){s=document.createElement('script');s.type='text/javascript';s.src='https://unpkg.com/css-var-editor?v='+parseInt(Math.random()*99999999);document.body.appendChild(s);})();">
-        Bookmark
-    </a>
+    Add <a class="link" href="javascript:(function(){s=document.createElement('script');s.type='text/javascript';s.src='https://unpkg.com/css-var-editor?v='+parseInt(Math.random()*99999999);document.body.appendChild(s);})();">
+        CSS Var Editor
+    </a> as a bookmark, or click the link to try the editor
 </div>
 </body>
 </html>
